# loch

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  parse.rs  url.rs  util.rs
tests/: file_walk.rs  find_urls.rs  util.rs
tests/test_dir/: .file  example  example.txt  test  test.rs  test.txt
tests/test_dir/.dir/: test
